# Test_work-Linux-

./: CMakeLists.txt  users_manual_(for application) (ENG).txt  users_manual_(for application)(RUS).txt
applications/: control_system  logger  math_model
applications(Linux)/: control_system  logger  math_model
cmake_tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
source/: Readme(RUS).txt  control_system.cpp  controlbody.cpp  logger.cpp  loggerbody.cpp  math_model.cpp  modelbody.cpp  queue.cpp  signal.cpp  tcplib.cpp
